--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "projetointegrador-node",
   "version": "1.0.0",
   "description": ".",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/samuelmachado/projetointegrador-node#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "2.0.3"
   }
 }
